# gmodpipe

./: .gitignore  CMakeLists.txt  CMakePresets.json  gmodpipe.cpp
.github/workflows/: build.yml
